# nix-arbor

./: AGENTS.md  README.md  flake.nix
bootstrap/: README.md  bootstrap-validate.py  live-installer.nix  live-installer.py  nbootstrap.py  public-export.py  secrets.md  validation.md  yggdrasil-bootstrap.py
checks/: AGENTS.md  cluster-identity-registry-v1.nix  identity-policy.nix  network-overlay-eval.nix  no-default-nix.nix  yggdrasil-private-smoke.nix
dendrites/: AGENTS.md  CLAUDE.md  README.md
docs/: AGENTS.md  README.md  architecture.md  authoring-guide.md  changes.md  conventions.md  dendritic-guide.md  migration-plan.md  private-overlay-and-deployments.md  public-export.md  storage-fabric-restore-drills.md  storage-fabric-roadmap.md  storage-fabric-runbook.md  storage-fabric-security.md  storage-fabric.md  tape-library-coding-guide.md  tape-library.md  terminal-ux.md
experiments/: AGENTS.md  CLAUDE.md
experiments/tapelib/: README.md  meta.nix  pyproject.toml  tapelib.nix
experiments/tapelib/docs/: README.md  plan1.txt
experiments/tapelib/docs/filesystem/: README.md  operations.md  performance-smoke-test.md
experiments/tapelib/nix/: tapelib-module.nix
experiments/tapelib/src/tapelib/: archive.py  cli.py  db.py  executor.py  fuse_fs.py  hardware.py  job_status.py
experiments/tapelib/tests/: conftest.py  test_archive.py  test_cli.py  test_db.py  test_fuse_fs.py  test_hardware.py  test_retrieve.py
features/: README.md
fruits/: AGENTS.md
homes/: AGENTS.md  CLAUDE.md
hosts/: AGENTS.md
inventory/: AGENTS.md  CLAUDE.md  README.md  hosts.nix  (+10 more)
(+596 files in other folders)
