[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapelib"
version = "0.1.0"
description = "Tape library overlay scaffold with catalog-first planning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ash" }
]
dependencies = []

[project.scripts]
tapelib = "tapelib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tapelib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
